--- a/shared.css
+++ b/shared.css
@@ -15,4 +15,10 @@ textarea{
 	width:300px;
 	height:250px;
 	background:#fff;
+	border:1px solid #bbb;
+	border-radius:3px;
+}
+
+.popup.content{
+	width:340px;
 }
